--- a/resources/scss/pattern/_p_main.scss
+++ b/resources/scss/pattern/_p_main.scss
@@ -9,42 +9,39 @@
 }
 
 .sec-cartier {
-    h2 {
+    .sec-g__tit {
         font-size: 15vw;
         font-weight: 400;
         margin-bottom: 41px;
     }
-    img {
-        border-radius: 18px;
-        margin-bottom: 31px;
+    .sec-g__cont {
+        .sec-g__img {
+            border-radius: 18px;
+            margin-bottom: 31px;
+        }
+        .sec-g__desc {
+            font-weight: normal;
+            font-size: 4vw;
+        }
     }
-    strong {
-        font-weight: normal;
-        font-size: 5vw;
-        font-optical-sizing: auto;
-        letter-spacing: 0px;
-        line-height: 170%;
-    }
-    a {
-        font-size: 4vw;
+    .sec-g__more {
+        font-size: 3vw;
         margin-top: 36px;
         margin-bottom: 126px;
-        letter-spacing: 0px;
     }
 }
 
 .sec-cartier2 {
-    h2 {
+    .sec-g__tit {
         font-size: 15vw;
         font-weight: 400;
         line-height: 100%;
     }
-    p {
+    .sec-g__desc {
         font-weight: normal;
+        font-size: 4vw;
         margin-top: 20px;
         margin-bottom: 30px;
-        letter-spacing: 0px;
-        line-height: 170%;
     }
     img {
         border-radius: 18px;
@@ -54,21 +51,22 @@
 }
 
 .sec-cartier3 {
-    h2 {
+    .sec-g__tit {
         font-size: 15vw;
         font-weight: 400;
         line-height: 100%;
+        margin-bottom: 22px;
     }
-    li {
+    .lst-cartier3 li {
         position: relative;
         margin-bottom: 20px;
+        img {
+            border-radius: 18px;
+            margin-top: 6px;
+            margin-bottom: 6px;
+        }
     }
 
-    img {
-        border-radius: 18px;
-        margin-top: 6px;
-        margin-bottom: 6px;
-    }
     .txt-area {
         display: flex;
         flex-direction: column;
@@ -77,49 +75,44 @@
         top: 0;
         bottom: 50px;
         margin-left: 10px;
-        strong {
+        .title {
             font-family: 'Montserrat', sans-serif;
             font-optical-sizing: auto;
             font-weight: 500;
             font-style: normal;
-            font-size: 23px;
+            font-size: 6vw;
             color: #fff;
-            letter-spacing: 0px;
-            line-height: 100%;
+            line-height: 130%;
             margin-bottom: 8px;
         }
-        p {
-            font-size: 9px;
+        .desc {
+            font-size: 2vw;
             font-weight: 300;
-            letter-spacing: 0px;
             line-height: 160%;
             color: #fff;
         }
     }
 }
 .sec-cartier4 {
-    h2 {
+    .sec-g__tit {
         font-size: 15vw;
         font-weight: 400;
         line-height: 100%;
         margin-bottom: 25px;
     }
-    ul {
+    .swiper-wrapper {
         display: flex;
         align-items: center;
         justify-content: space-between;
         margin-bottom: 100px;
-        .img4-1 {
+        .sec-g__img1 {
             width: 73px;
-            height: 33px;
         }
-        .img4-2 {
+        .sec-g__img2 {
             width: 73px;
-            height: 18.42px;
         }
-        .img4-3 {
+        .sec-g__img3 {
             width: 63.39px;
-            height: 23.84px;
         }
     }
 }
