--- a/resources/scss/pattern/_p_main.scss
+++ b/resources/scss/pattern/_p_main.scss
@@ -6,6 +6,11 @@
     margin-bottom: 195px;
     letter-spacing: -1px;
     @include ff-lora;
+    @include mobileMore {
+        font-size: 218px;
+        margin-top: 107px;
+        margin-bottom: 573px;
+    }
 }
 
 .sec-cartier {
@@ -13,21 +18,36 @@
         font-size: 15vw;
         font-weight: 400;
         margin-bottom: 41px;
+        @include mobileMore {
+            font-size: 119px;
+            margin-bottom: 59px;
+        }
     }
     .sec-g__cont {
         .sec-g__img {
             border-radius: 18px;
             margin-bottom: 31px;
+            @include mobileMore {
+                margin-bottom: 47px;
+            }
         }
         .sec-g__desc {
             font-weight: normal;
             font-size: 4vw;
+            @include mobileMore {
+                font-size: 31px;
+            }
         }
     }
     .sec-g__more {
         font-size: 3vw;
         margin-top: 36px;
         margin-bottom: 126px;
+        @include mobileMore {
+            font-size: 25px;
+            margin-top: 55px;
+            margin-bottom: 392px;
+        }
     }
 }
 
@@ -37,20 +57,50 @@
         font-weight: 400;
         line-height: 100%;
         margin-bottom: 11px;
+        @include mobileMore {
+            font-size: 119px;
+            margin-bottom: 64px;
+        }
     }
     .sec-g__desc {
         font-weight: normal;
         font-size: 4vw;
         margin-top: 20px;
         margin-bottom: 70px;
-        @include tabletMore {
-            font-size: 20px;
+        @include mobileMore {
+            font-size: 31px;
         }
     }
-    img {
-        border-radius: 18px;
-        margin-top: 20px;
-        margin-bottom: 20px;
+    .lst-cartier2 {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        @include mobileMore {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            justify-content: space-between;
+            li {
+                width: 45%;
+                &:nth-child(2n) {
+                    a {
+                        display: block;
+                        margin-top: 158px;
+                    }
+                }
+            }
+        }
+        .sec-g__img {
+            border-radius: 18px;
+
+            @include mobileMore {
+                height: 460px;
+            }
+        }
+        .sec-g__img2 {
+            object-fit: cover;
+            height: 460px;
+        }
     }
 }
 
@@ -64,7 +114,7 @@
     .lst-cartier3 li {
         position: relative;
         margin-bottom: 20px;
-        img {
+        .sec-g__img {
             border-radius: 18px;
             margin-top: 6px;
             margin-bottom: 6px;
