--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -10,6 +10,10 @@
     @include tablet {
         padding: 0 $p-tablet;
     }
+    @include tabletMore {
+        margin: 0;
+        padding: 0;
+    }
 }
 
 #skip-nav {
