--- a/resources/scss/pattern/_p_main.scss
+++ b/resources/scss/pattern/_p_main.scss
@@ -1,9 +1,15 @@
 // 사이트 컨텐츠 내용
+#wrap {
+    @include tabletMore {
+        margin-left: 210px;
+        margin-right: 210px;
+    }
+}
 .intro {
     font-size: 21vw;
     font-weight: 400;
     margin-top: 35px;
-    margin-bottom: 195px;
+    margin-bottom: 150px;
     letter-spacing: -1px;
     @include ff-lora;
     @include mobileMore {
@@ -11,24 +17,40 @@
         margin-top: 107px;
         margin-bottom: 573px;
     }
+    @include tabletMore {
+        font-size: 270px;
+        margin-top: 300px;
+        margin-bottom: 35px;
+    }
 }
 
 .sec-cartier {
     .sec-g__tit {
         font-size: 15vw;
         font-weight: 400;
-        margin-bottom: 41px;
+        margin-bottom: 25px;
         @include mobileMore {
             font-size: 119px;
             margin-bottom: 59px;
         }
+        @include tabletMore {
+            font-size: 170px;
+            margin-bottom: 0;
+        }
     }
     .sec-g__cont {
+        @include tabletMore {
+            display: flex;
+        }
         .sec-g__img {
             border-radius: 18px;
             margin-bottom: 31px;
             @include mobileMore {
                 margin-bottom: 47px;
+            }
+            @include tabletMore {
+                width: 1009px;
+                height: 665px;
             }
         }
         .sec-g__desc {
@@ -38,15 +60,19 @@
                 font-size: 31px;
             }
         }
-    }
-    .sec-g__more {
-        font-size: 3vw;
-        margin-top: 36px;
-        margin-bottom: 126px;
-        @include mobileMore {
-            font-size: 25px;
-            margin-top: 55px;
-            margin-bottom: 392px;
+        .sec-g__more {
+            font-size: 3vw;
+            margin-top: 15px;
+            margin-bottom: 126px;
+            @include mobileMore {
+                font-size: 25px;
+                margin-top: 55px;
+                margin-bottom: 308px;
+            }
+            @include tabletMore {
+                margin-top: 0;
+                margin-bottom: 0;
+            }
         }
     }
 }
@@ -56,19 +82,22 @@
         font-size: 15vw;
         font-weight: 400;
         line-height: 100%;
-        margin-bottom: 11px;
+        margin-bottom: 8px;
         @include mobileMore {
             font-size: 119px;
-            margin-bottom: 64px;
+            margin-bottom: 61px;
         }
     }
     .sec-g__desc {
+        display: block;
         font-weight: normal;
         font-size: 4vw;
-        margin-top: 20px;
-        margin-bottom: 70px;
+        margin-top: 3px;
+        margin-bottom: 60px;
         @include mobileMore {
+            display: block;
             font-size: 31px;
+            padding-bottom: 20px;
         }
     }
     .lst-cartier2 {
@@ -92,14 +121,16 @@
         }
         .sec-g__img {
             border-radius: 18px;
-
             @include mobileMore {
                 height: 460px;
             }
         }
         .sec-g__img2 {
-            object-fit: cover;
-            height: 460px;
+            border-radius: 18px;
+            @include mobileMore {
+                object-fit: cover;
+                height: 460px;
+            }
         }
     }
 }
@@ -109,7 +140,13 @@
         font-size: 15vw;
         font-weight: 400;
         line-height: 100%;
-        margin-bottom: 22px;
+        margin-top: 87px;
+        margin-bottom: 25px;
+        @include mobileMore {
+            font-size: 119px;
+            margin-top: 308px;
+            margin-bottom: 72px;
+        }
     }
     .lst-cartier3 li {
         position: relative;
@@ -118,6 +155,10 @@
             border-radius: 18px;
             margin-top: 6px;
             margin-bottom: 6px;
+            @include mobileMore {
+                margin-top: 12px;
+                margin-bottom: 12px;
+            }
         }
     }
 
@@ -134,16 +175,23 @@
             font-optical-sizing: auto;
             font-weight: 500;
             font-style: normal;
-            font-size: 6vw;
+            font-size: 4.5vw;
             color: #fff;
             line-height: 130%;
             margin-bottom: 8px;
+            @include mobileMore {
+                font-size: 35px;
+                margin-bottom: 16px;
+            }
         }
         .desc {
             font-size: 2vw;
             font-weight: 300;
             line-height: 160%;
             color: #fff;
+            @include mobileMore {
+                font-size: 18px;
+            }
         }
     }
 }
@@ -152,7 +200,13 @@
         font-size: 15vw;
         font-weight: 400;
         line-height: 100%;
-        margin-bottom: 25px;
+        margin-top: 80px;
+        margin-bottom: 40px;
+        @include mobileMore {
+            font-size: 119px;
+            margin-top: 343px;
+            margin-bottom: 80px;
+        }
     }
     .swiper-wrapper {
         display: flex;
@@ -161,12 +215,21 @@
         margin-bottom: 100px;
         .sec-g__img1 {
             width: 73px;
+            @include mobileMore {
+                width: 144px;
+            }
         }
         .sec-g__img2 {
             width: 73px;
+            @include mobileMore {
+                width: 163px;
+            }
         }
         .sec-g__img3 {
             width: 63.39px;
+            @include mobileMore {
+                width: 122px;
+            }
         }
     }
 }
