[cartier]feat.헤더푸터추가

--- a/pages/layout/footer.html
+++ b/pages/layout/footer.html
@@ -1,1 +1,32 @@
-footer 내용
+<!-- FOOTER -->
+<div class="inner">
+    <div class="footer__contents">
+        <div class="info">
+            ㈜ 리치몬트 코리아｜대표이사: 이진원
+            <br />
+            사업자 등록번호: 102-81-41612 ｜ 통신판매 신고번호: 2017-서울중구-1264
+            <br />
+            주소 : 서울 중구 퇴계로 100 스테이트타워 남산 (04631)
+            <br />
+            까르띠에 컨택센터: 1877-4326｜E-mail : contact.kr@clientrelations.cartier.com
+        </div>
+        <div class="line"></div>
+        <div class="sns">
+            <a href="#">
+                <img src="/resources/images/component/common/Instagram.png" class="footer__img" alt="Instagram" />
+            </a>
+            <a href="#">
+                <img src="/resources/images/component/common/Facebook F.png" class="footer__img" alt="Facebook" />
+            </a>
+            <a href="#">
+                <img src="/resources/images/component/common/TwitterX.png" class="footer__img" alt="TwitterX" />
+            </a>
+            <a href="#">
+                <img src="/resources/images/component/common/YouTube.png" class="footer__img" alt="YouTube" />
+            </a>
+            <a href="#">
+                <img src="/resources/images/component/common/Pinterest.png" class="footer__img" alt="Pinterest" />
+            </a>
+        </div>
+    </div>
+</div>
